Fix desktop approach title alignment

--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -113,7 +113,8 @@ $icon-font-path: '../fonts/';
     display: block;
     background-color: inherit;
     flex: none;
-
+    text-align: left;
+    
     h1 {
       font-size: 38px;
       line-height: 110%;
